<resources>
    <string name="app_name">Hunter Bay</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="forget_password">Esqueceu sua senha?</string>
    <string name="app_name_modif">Hunter\nBay</string>
    <string name="new_person">Novo por aqui?</string>
    <string name="create_account">Criar conta</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="btn_create_account">Cria conta</string>
    <string name="set_email">Digite seu e-mail</string>
    <string name="instructions_password"> Para redefinir sua senha, informe o usuário ou email cadastrado na sua conta e lhe enviaremos um link com as instruções.</string>
    <string name="lastName">Sobrenome</string>
    <string name="profile">Perfil</string>
    <string name="home">Inicio</string>
</resources>

